--- a/documentation/css/now-ui-dashboard.css
+++ b/documentation/css/now-ui-dashboard.css
@@ -1835,7 +1835,7 @@ input,
 optgroup,
 select,
 textarea {
-  font-family: "Montserrat", "Helvetica Neue", Arial, sans-serif;
+  font-family: "kanit", "Helvetica Neue", Arial, sans-serif;
 }
 
 h1,
@@ -2032,8 +2032,8 @@ a.text-gray:hover {
 
 body {
   color: #2c2c2c;
-  font-size: 14px;
-  font-family: "Montserrat", "Helvetica Neue", Arial, sans-serif;
+  font-size: 16px;
+  font-family: "kanit", "Helvetica Neue", Arial, sans-serif;
   -moz-osx-font-smoothing: grayscale;
   -webkit-font-smoothing: antialiased;
 }
@@ -4131,7 +4131,7 @@ Created using IcoMoon - icomoon.io
 
 .sidebar[data-color="red"]:after,
 .off-canvas-sidebar[data-color="red"]:after {
-  background: #FF3636;
+  background: #FFFFFF;
 }
 
 .sidebar[data-color="red"] .nav li.active>a,
