--- a/src/assets/scss/now-ui-dashboard/_variables.scss
+++ b/src/assets/scss/now-ui-dashboard/_variables.scss
@@ -2,7 +2,7 @@
 //
 //## For each of Bootstrap's buttons, define text, background and border color.
 
-$sans-serif-family:          'Montserrat', 'Helvetica Neue',  Arial, sans-serif;
+$sans-serif-family:          'kanit', 'Helvetica Neue',  Arial, sans-serif;
 
 $none:                       0   !default;
 $border-thin:                1px !default;
@@ -159,7 +159,7 @@ $font-paragraph:               1em          !default;
 $font-size-navbar:             1em          !default;
 $font-size-mini:               0.7142em     !default;
 $font-size-small:              0.8571em     !default;
-$font-size-base:               14px         !global;
+$font-size-base:               16px         !global;
 $font-size-large:              1em          !default;
 $font-size-large-navbar:       20px         !default;
 $font-size-blockquote:         1.1em        !default; // ~ 15px
@@ -240,7 +240,7 @@ $bottombar-back:       bottombar-back !default;
 //Nucleo Icons
 
 $nc-font-path:        '../fonts' !default;
-$nc-font-size-base:   14px !default;
+$nc-font-size-base:   16px !default;
 $nc-css-prefix:       now-ui !default;
 $nc-background-color:     #eee !default;
 $nc-li-width:         (30em / 14) !default;
