up navbar.component

--- a/src/assets/scss/now-ui-dashboard/_nucleo-outline.scss
+++ b/src/assets/scss/now-ui-dashboard/_nucleo-outline.scss
@@ -177,7 +177,7 @@ Created using IcoMoon - icomoon.io
 }
 
 .now-ui-icons.business_bank:before {
-  content: "\ea0a";
+  content: "\f005";
 }
 
 .now-ui-icons.business_briefcase-24:before {
