--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -1,12 +1,9 @@
 
 <div class="logo">
-    <a href="https://www.creative-tim.com" class="simple-text logo-mini">
-      <div class="logo-img">
-          <img src="./assets/img/angular2-logo-white.png"/>
-      </div>
-    </a>
+
     <a href="https://www.creative-tim.com" class="simple-text logo-normal">
-        Creative Tim
+      <h4>สวัสดี! คุณ Admin </h4>
+
     </a>
 </div>
 <div class="sidebar-wrapper">
@@ -15,6 +12,7 @@
             <a [routerLink]="[menuItem.path]" class="cu-font-size">
                 <i class="now-ui-icons {{menuItem.icon}}"></i>
                 <p>{{menuItem.title}}</p>
+
             </a>
         </li>
     </ul>
