--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,26 +1,38 @@
-<div class="container">
+<div class="container ">
   <div class="row justify-content-md-center mt-5">
-    <div class="col-6">
-      <h2 class="text-center">Administrator Login</h2>
+    <div class="col-12 col-md-7 col-xl-5">
+      <div class="logo-img">
+        <img src="./assets/img/logo.png" />
+      </div>
+      <div class="row text-center mt-5">
+        <div class="col-5 ">
+          <hr>
+        </div>
+        <div class="col-2">
+          <img src="./assets/img/lock.png" />
+        </div>
+        <div class="col-5">
+          <hr>
+        </div>
+      </div>
+      <h3 class="text-center mt-5 ">Administrator Login</h3>
       <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
-        <div class="form-group">
-          <label for="username">Username</label>
-          <input type="text" formControlName="username" class="form-control"
-            [ngClass]="{ 'is-invalid': submitted && f.username.errors }" />
+        <div class="form-group mt-5">
+          <input type="text" formControlName="username" class="form-control input-login"
+            [ngClass]="{ 'is-invalid': submitted && f.username.errors }" placeholder="Username" />
           <div *ngIf="submitted && f.username.errors" class="invalid-feedback">
             <div *ngIf="f.username.errors.required">Username is required</div>
           </div>
         </div>
         <div class="form-group">
-          <label for="password">Password</label>
           <input type="password" formControlName="password" class="form-control"
-            [ngClass]="{ 'is-invalid': submitted && f.password.errors }" />
+            [ngClass]="{ 'is-invalid': submitted && f.password.errors }" placeholder="Password" />
           <div *ngIf="submitted && f.password.errors" class="invalid-feedback">
             <div *ngIf="f.password.errors.required">Password is required</div>
           </div>
         </div>
-        <div class="form-group">
-          <a routerLink="/home" class="btn btn-primary w-100">Login</a>
+        <div class="form-group mt-5">
+          <a routerLink="/home" class="btn btn-primary w-100 ">เข้าสู่ระบบ</a>
         </div>
       </form>
     </div>
