--- a/src/app/typography/typography.component.html
+++ b/src/app/typography/typography.component.html
@@ -11,27 +11,27 @@
         <div class="card-body">
           <div class="typography-line">
             <h1>
-              <span>Header 1</span>The Life of Now Ui Dashboard </h1>
+              <span>Header 1</span>The Life of Now Ui dashboard </h1>
           </div>
           <div class="typography-line">
             <h2>
-              <span>Header 2</span>The Life of Now Ui Dashboard </h2>
+              <span>Header 2</span>The Life of Now Ui dashboard </h2>
           </div>
           <div class="typography-line">
             <h3>
-              <span>Header 3</span>The Life of Now Ui Dashboard </h3>
+              <span>Header 3</span>The Life of Now Ui dashboard </h3>
           </div>
           <div class="typography-line">
             <h4>
-              <span>Header 4</span>The Life of Now Ui Dashboard </h4>
+              <span>Header 4</span>The Life of Now Ui dashboard </h4>
           </div>
           <div class="typography-line">
             <h5>
-              <span>Header 5</span>The Life of Now Ui Dashboard </h5>
+              <span>Header 5</span>The Life of Now Ui dashboard </h5>
           </div>
           <div class="typography-line">
             <h6>
-              <span>Header 6</span>The Life of Now Ui Dashboard </h6>
+              <span>Header 6</span>The Life of Now Ui dashboard </h6>
           </div>
           <div class="typography-line">
             <p>
