--- a/src/app/upgrade/upgrade.component.html
+++ b/src/app/upgrade/upgrade.component.html
@@ -5,8 +5,8 @@
     <div class="col">
       <div class="card card-upgrade">
         <div class="card-header">
-          <h5 class="card-title">Now UI Dashboard PRO Angular</h5>
-            <p class="category">Are you looking for more components? Please check our Premium Version of Now UI Dashboard PRO Angular.</p>
+          <h5 class="card-title">Now UI dashboard PRO Angular</h5>
+            <p class="category">Are you looking for more components? Please check our Premium Version of Now UI dashboard PRO Angular.</p>
         </div>
         <div class="card-body">
           <div class="table-responsive table-upgrade">
