--- a/src/app/components/sidebar/sidebar.component.css
+++ b/src/app/components/sidebar/sidebar.component.css
@@ -5,3 +5,8 @@
   background-color: #FFFFFF;
   box-shadow: 1px 3px #c0c0c0 !important;
 }
+.text-nav{
+  margin: 0 30px;
+  color: #208faf;
+  font-weight: 300;
+}
