--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -1,19 +1,19 @@
-
 <div class="logo">
-
-    <a href="https://www.creative-tim.com" class="simple-text logo-normal">
-      <h4>สวัสดี! คุณ Admin </h4>
-
-    </a>
+  <img src="./assets/img/logo.png" />
 </div>
-<div class="sidebar-wrapper">
-    <ul class="nav">
-        <li routerLinkActive="active" *ngFor="let menuItem of menuItems" class="{{menuItem.class}} nav-item">
-            <a [routerLink]="[menuItem.path]" class="cu-font-size">
-                <i class="now-ui-icons {{menuItem.icon}}"></i>
-                <p>{{menuItem.title}}</p>
+<div class="sidebar-wrapper mt-3">
 
-            </a>
-        </li>
-    </ul>
+  <a class="simple-text logo-normal">
+    <h4 class="text-nav">สวัสดี! คุณ Admin </h4>
+  </a>
+  <ul class="nav">
+
+    <li routerLinkActive="active" *ngFor="let menuItem of menuItems" class="{{menuItem.class}} nav-item">
+      <a [routerLink]="[menuItem.path]" class="cu-font-size">
+        <i class="now-ui-icons {{menuItem.icon}}"></i>
+        <p>{{menuItem.title}}</p>
+
+      </a>
+    </li>
+  </ul>
 </div>
