--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,19 @@
-<p>home works!</p>
+
+<div class="container">
+  <div class="row mt-5">
+    <div class="col-12 mt-5">
+      <img src="./assets/img/header-home.png" />
+    </div>
+    <div class="col-12 mt-5">
+      <h5 class="text-center">แอปเดียวจบ...ครบเรื่องบ้าน</h5>
+      <p class="text-center"> แอปพลิเคชั่น ค้นหาเกี่ยวกับการดูแลบ้านในด้านต่างๆ ไม่ว่าจะเป็น  <br>
+      บริการทำความสะอาด บริการล้างแอร์ กำจัดปลวกและแมลง จัดหาช่างซ่อมให้กับคุณ ทั้งระบบน้ำ <br>
+    ระบบไฟ งานโครงสร้าง ซ่อมเครื่องใช้ไฟฟ้าและอื่นๆ ที่จะช่วยให้ชีวิตคุณนั้นง่ายยิ่งขึ้น</p>
+    </div>
+    <div class="col-12">
+      <h5 >ข่าวประชาสัมพันธ์</h5>
+    </div>
+    <div class="col-12 mt-3 spacing-new">
+    </div>
+  </div>
+</div>
