--- a/src/assets/scss/now-ui-dashboard/_navbar.scss
+++ b/src/assets/scss/now-ui-dashboard/_navbar.scss
@@ -176,7 +176,7 @@
         .nav-item .nav-link:not(.btn):active{
             background-color: $opacity-2;
             border-radius: $border-radius-small;
-            color: $white-color;
+            color: #68b0d9;
         }
     }
 
@@ -219,9 +219,9 @@
     }
 
     &.navbar-transparent{
-        background-color: $transparent-bg !important;
+        background-color: #ffffff !important;
         box-shadow: none;
-        color: $white-color;
+        color: #208faf;
     }
 
     &.bg-white:not(.navbar-transparent){
@@ -243,7 +243,7 @@
         .nav-item .nav-link:not(.btn):hover,
         .nav-item .nav-link:not(.btn):active{
             background-color: $opacity-gray-8;
-            color: $default-color;
+            color: #68b0d9;
         }
 
         .logo-container{
