--- a/documentation/css/now-ui-dashboard.css
+++ b/documentation/css/now-ui-dashboard.css
@@ -1887,7 +1887,6 @@ h4,
 .h4 {
   font-size: 1.714em;
   line-height: 1.45em;
-  margin-top: 30px;
   margin-bottom: 15px;
 }
 
@@ -2277,7 +2276,7 @@ a[data-toggle="collapse"][aria-expanded="true"] .caret,
 }
 
 .navbar a:not(.btn):not(.dropdown-item) {
-  color: #FFFFFF;
+  color: #68b0d9 !important;
 }
 
 .navbar a.dropdown-item {
@@ -2500,7 +2499,7 @@ a[data-toggle="collapse"][aria-expanded="true"] .caret,
 }
 
 .navbar.navbar-transparent {
-  background-color: transparent !important;
+  background-color: #777777 !important;
   box-shadow: none;
   color: #FFFFFF;
 }
@@ -3910,7 +3909,7 @@ Created using IcoMoon - icomoon.io
 
 .sidebar .nav li:first-child>a,
 .off-canvas-sidebar .nav li:first-child>a {
-  margin: 0 15px;
+  margin: 0 30px;
 }
 
 .sidebar .nav li:hover:not(.active)>a,
@@ -4180,8 +4179,8 @@ Created using IcoMoon - icomoon.io
   position: relative;
   float: right;
   width: calc(100% - 260px);
-  background-color: #E3E3E3;
-  background-color: #ebecf1;
+  background-color: #ffffff;
+  background-color: #ffffff;
   -webkit-transition: all 0.5s cubic-bezier(0.685, 0.0473, 0.346, 1);
   -moz-transition: all 0.5s cubic-bezier(0.685, 0.0473, 0.346, 1);
   -o-transition: all 0.5s cubic-bezier(0.685, 0.0473, 0.346, 1);
