--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 
-<nav class="navbar navbar-expand-lg navbar-transparent  navbar-absolute bg-primary fixed-top">
+<nav class="navbar navbar-main navbar-expand-lg navbar-transparent navbar-light headroom headroom--top headroom--pinned" style=" position: static !important;">
     <div class="container-fluid">
         <div class="navbar-wrapper">
             <div class="navbar-toggle">
@@ -20,7 +20,7 @@
         <div class="collapse navbar-collapse justify-content-end" id="collapseExample" [ngbCollapse]="isCollapsed">
           <form>
             <div class="input-group no-border">
-              <input type="text" value="" class="form-control" placeholder="Search...">
+                 <input type="text" value="" class="form-control" placeholder="ค้นหา...">
               <div class="input-group-append">
                 <div class="input-group-text">
                   <i class="now-ui-icons ui-1_zoom-bold"></i>
@@ -31,30 +31,9 @@
           <ul class="navbar-nav">
             <li class="nav-item">
               <a class="nav-link" href="#pablo">
-                <i class="now-ui-icons media-2_sound-wave"></i>
-                <p>
-                  <span class="d-lg-none d-md-block">Stats</span>
-                </p>
-              </a>
-            </li>
-            <li class="nav-item" ngbDropdown>
-              <a class="nav-link" id="dropdownBasic1" ngbDropdownToggle>
-                <i class="now-ui-icons location_world"></i>
-                <p>
-                  <span class="d-lg-none d-md-block">Some Actions</span>
-                </p>
-              </a>
-              <div class="dropdown-menu dropdown-menu-right" ngbDropdownMenu aria-labelledby="dropdownBasic1">
-                <a class="dropdown-item" href="#">Action</a>
-                <a class="dropdown-item" href="#">Another action</a>
-                <a class="dropdown-item" href="#">Something else here</a>
-              </div>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#pablo">
-                <i class="now-ui-icons users_single-02"></i>
-                <p>
-                  <span class="d-lg-none d-md-block">Account</span>
+                <i class="now-ui-icons users_single-02" style="color: #68b0d9"> </i>
+                <p style=" color: #68b0d9;">
+                    ผู้ดูแลระบบ
                 </p>
               </a>
             </li>
