--- a/src/app/user-profile/user-profile.component.html
+++ b/src/app/user-profile/user-profile.component.html
@@ -1,122 +1,97 @@
-<div class="panel-header panel-header-sm">
-</div>
-<div class="main-content">
-  <div class="row">
-    <div class="col-md-8">
-      <div class="card">
-        <div class="card-header">
-          <h5 class="title">Edit Profile</h5>
-        </div>
-        <div class="card-body">
-          <form>
-            <div class="row">
-              <div class="col-md-5 pr-1">
-                <div class="form-group">
-                  <label>Company (disabled)</label>
-                  <input type="text" class="form-control" disabled="" placeholder="Company" value="Creative Code Inc.">
-                </div>
-              </div>
-              <div class="col-md-3 px-1">
-                <div class="form-group">
-                  <label>Username</label>
-                  <input type="text" class="form-control" placeholder="Username" value="michael23">
-                </div>
-              </div>
-              <div class="col-md-4 pl-1">
-                <div class="form-group">
-                  <label for="email">Email address</label>
-                  <input name="email" id="email" type="email" class="form-control" placeholder="Email">
-                </div>
-              </div>
-            </div>
-            <div class="row">
-              <div class="col-md-6 pr-1">
-                <div class="form-group">
-                  <label>First Name</label>
-                  <input type="text" class="form-control" placeholder="Company" value="Mike">
-                </div>
-              </div>
-              <div class="col-md-6 pl-1">
-                <div class="form-group">
-                  <label>Last Name</label>
-                  <input type="text" class="form-control" placeholder="Last Name" value="Andrew">
-                </div>
-              </div>
-            </div>
-            <div class="row">
-              <div class="col-md-12">
-                <div class="form-group">
-                  <label>Address</label>
-                  <input type="text" class="form-control" placeholder="dashboard Address" value="Bld Mihail Kogalniceanu, nr. 8 Bl 1, Sc 1, Ap 09">
-                </div>
-              </div>
-            </div>
-            <div class="row">
-              <div class="col-md-4 pr-1">
-                <div class="form-group">
-                  <label>City</label>
-                  <input type="text" class="form-control" placeholder="City" value="Mike">
-                </div>
-              </div>
-              <div class="col-md-4 px-1">
-                <div class="form-group">
-                  <label>Country</label>
-                  <input type="text" class="form-control" placeholder="Country" value="Andrew">
-                </div>
-              </div>
-              <div class="col-md-4 pl-1">
-                <div class="form-group">
-                  <label>Postal Code</label>
-                  <input type="number" class="form-control" placeholder="ZIP Code">
-                </div>
-              </div>
-            </div>
-            <div class="row">
-              <div class="col-md-12">
-                <div class="form-group">
-                  <label>About Me</label>
-                  <textarea rows="4" cols="80" class="form-control" placeholder="Here can be your description" value="Mike">Lamborghini Mercy, Your chick she so thirsty, I'm in that two seat Lambo.</textarea>
-                </div>
-              </div>
-            </div>
-          </form>
-        </div>
+<div class="main-content mt-5">
+  <div class="container container-broder">
+    <div class="row">
+      <div class="col-12 text-center">
+        <h2>ประวัติการทำรายการ</h2>
       </div>
-    </div>
-    <div class="col-md-4">
-      <div class="card card-user">
-        <div class="image">
-          <img src="../assets/img/bg5.jpg" alt="...">
-        </div>
-        <div class="card-body">
-          <div class="author">
-            <a href="#">
-              <img class="avatar border-gray" src="../assets/img/mike.jpg" alt="...">
-              <h5 class="title">Mike Andrew</h5>
-            </a>
-            <p class="description">
-              michael24
-            </p>
+      <div class="col-12">
+        <h5>รายงานข้อมูลสมาชิกตามวันที่</h5>
+      </div>
+
+      <div class="col-12">
+        <div class="row">
+          <div class="col-6">
+            <div class="row">
+              <h4>ประเภทผู้ใช้</h4>
+              <div class="dropdown">
+                <button class="btn-dropdown btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton"
+                  data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"
+                  style="background-color: transparent;color: #007fa4; ">
+                  ทั้งหมด
+                </button>
+                <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                  <a class="dropdown-item" href="#">Action</a>
+                  <a class="dropdown-item" href="#">Another action</a>
+                  <a class="dropdown-item" href="#">Something else here</a>
+                </div>
+              </div>
+            </div>
           </div>
-          <p class="description text-center">
-            "Lamborghini Mercy
-            <br> Your chick she so thirsty
-            <br> I'm in that two seat Lambo"
-          </p>
-        </div>
-        <hr>
-        <div class="button-container">
-          <button href="#" class="btn btn-neutral btn-icon btn-round btn-lg">
-            <i class="fab fa-facebook-f"></i>
-          </button>
-          <button href="#" class="btn btn-neutral btn-icon btn-round btn-lg">
-            <i class="fab fa-twitter"></i>
-          </button>
-          <button href="#" class="btn btn-neutral btn-icon btn-round btn-lg">
-            <i class="fab fa-google-plus-g"></i>
-          </button>
+          <div class="col-6 text-right">
+            <div class="row ">
+              <h4>ประเภทผู้ใช้</h4>
+              <div class="dropdown ">
+                <button class="btn-dropdown btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton"
+                  data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"
+                  style="background-color: transparent;color: #007fa4; ">
+                  ทั้งหมด
+                </button>
+                <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                  <a class="dropdown-item" href="#">Action</a>
+                  <a class="dropdown-item" href="#">Another action</a>
+                  <a class="dropdown-item" href="#">Something else here</a>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
+
+      <div class="col-12">
+        <hr>
+      </div>
+      <div class="col-12">
+          <table class="table">
+              <thead class="thead-dark">
+                <tr>
+                  <th scope="col">ลำดับ</th>
+                  <th scope="col">ชื่อนามสกุล</th>
+                  <th scope="col">หน่วยงาน</th>
+                  <th scope="col">เบอร์โทรศัพท์</th>
+                  <th scope="col">สถานะ</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td>123</td>
+                  <td>1101</td>
+                  <td>สมจิตร ช่างซ่อม</td>
+                  <td>....</td>
+
+                  <td><samp style="color: #ffc107">รออนุมัติ</samp></td>
+
+                </tr>
+                <tr>
+                    <td>124</td>
+                    <td>1102</td>
+                    <td>สมจิตร ช่างซ่อม</td>
+                    <td>....</td>
+                    <td><samp style="color: #28a745">ผ่านเกณฑ์</samp> </td>
+
+                </tr>
+                <tr>
+                    <td>125</td>
+                    <td>1103</td>
+                    <td>สมจิตร ช่างซ่อม</td>
+                    <td>....</td>
+                    <td><samp style="color: #dc3545">ไม่ผ่านเกณฑ์</samp></td>
+
+                </tr>
+              </tbody>
+            </table>
+      </div>
+
+
+      <!--container  -->
     </div>
   </div>
-</div>
