--- a/src/app/user-srevice/icons.component.css
+++ b/src/app/user-srevice/icons.component.css
@@ -4,20 +4,22 @@
   padding: 20px;;
 }
 
-h2{
+h3{
   color: #007fa4;
   padding-left: 20px;
-  font-weight: 600;
+  font-weight: 400;
 }
 h5{
   padding-left: 40px;
   color: #007fa4;
 }
+h6{
+  font-size: 18px;
+  font-weight: 300;
+  color: #007fa4;
+}
 h4{
   padding-left: 40px;
-  font-size: 22px;
-  font-weight: 300;
-  margin-left: 20px;
   color: #007fa4;
 }
 hr{
@@ -31,16 +33,9 @@ hr{
 tr {
   color: #007fa4;
 }
-.btn-dropdown{
-    border-width: 2px;
-    font-weight: 400;
-    font-size: 0.8571em;
-    line-height: 1.35em;
-    border: none;
-    margin: 0px 0px;
-    border-radius: 0.1875rem;
-    padding: 10px 20px;
-    cursor: pointer;
-    background-color: #888;
-    color: #FFFFFF;
+
+.span-date{
+  color: #007fa4;
+  padding: 5px 20px;
+  box-shadow: 1px 3px 5px #c0c0c0 !important;
 }
