--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,7 +1,7 @@
 <div class="container ">
   <div class="row justify-content-md-center mt-5">
     <div class="col-12 col-md-7 col-xl-5">
-      <div class="logo-img">
+      <div class="logo-img text-center">
         <img src="./assets/img/logo.png" />
       </div>
       <div class="row text-center mt-5">
