--- a/src/app/history/typography.component.html
+++ b/src/app/history/typography.component.html
@@ -10,7 +10,7 @@
       <div class="col-5">
         <form>
           <div class="input-group no-border">
-            <input type="text" value="" class="form-control" placeholder="ค้นหารายการ..." style="font-size: 16px;font-weight: 300">
+            <input type="text" value="" class="form-control" placeholder="ค้นหารายการ..." style="font-size: 16px;font-weight: 300 ;">
             <div class="input-group-append">
               <div class="input-group-text">
                 <i class="now-ui-icons ui-1_zoom-bold"></i>
