--- a/src/app/history/typography.component.html
+++ b/src/app/history/typography.component.html
@@ -60,7 +60,7 @@
               <td>สมจิตร ช่างซ่อม</td>
               <td>1,500</td>
               <td><samp style="color: #ffc107">ปฎิบัติงาน</samp></td>
-              <td><button type="button" class="btn btn-primary">แก้ไข</button></td>
+              <td><button type="button" class="btn btn-primary" [routerLink]="['/edit-history']">แก้ไข</button></td>
             </tr>
             <tr>
                 <td>21/02/2563</td>
@@ -69,7 +69,7 @@
                 <td>สมจิตร ช่างซ่อม</td>
                 <td>3,500</td>
                 <td><samp style="color: #28a745">สำเร็จ</samp> </td>
-                <td><button type="button" class="btn btn-primary">แก้ไข</button></td>
+                <td><button type="button" class="btn btn-primary" >แก้ไข</button></td>
             </tr>
             <tr>
                 <td>22/02/2563</td>
