--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -2,17 +2,18 @@
   <img src="./assets/img/logo.png" />
 </div>
 <div class="sidebar-wrapper mt-3">
-
   <a class="simple-text logo-normal">
-    <h4 class="text-nav">สวัสดี! คุณ Admin </h4>
+    <h4 class="text-nav">สวัสดี! คุณ Admin</h4>
   </a>
   <ul class="nav">
-
-    <li routerLinkActive="active" *ngFor="let menuItem of menuItems" class="{{menuItem.class}} nav-item">
+    <li
+      routerLinkActive="active"
+      *ngFor="let menuItem of menuItems"
+      class="{{ menuItem.class }} nav-item"
+    >
       <a [routerLink]="[menuItem.path]" class="cu-font-size">
-        <i class="now-ui-icons {{menuItem.icon}}"></i>
-        <p>{{menuItem.title}}</p>
-
+        <img class="iconMenu" src="{{ menuItem.icon }}" alt="" />
+        <p style="margin-top: 10px;">{{ menuItem.title }}</p>
       </a>
     </li>
   </ul>
