--- a/src/app/user-profile/user-profile.component.html
+++ b/src/app/user-profile/user-profile.component.html
@@ -14,9 +14,15 @@
             <div class="row">
               <h4>ประเภทผู้ใช้</h4>
               <div class="dropdown">
-                <button class="btn-dropdown btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton"
-                  data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"
-                  style="background-color: transparent;color: #007fa4; ">
+                <button
+                  class="btn-dropdown btn-secondary dropdown-toggle"
+                  type="button"
+                  id="dropdownMenuButton"
+                  data-toggle="dropdown"
+                  aria-haspopup="true"
+                  aria-expanded="false"
+                  style="background-color: transparent; color: #007fa4;"
+                >
                   ทั้งหมด
                 </button>
                 <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
@@ -28,12 +34,18 @@
             </div>
           </div>
           <div class="col-6 text-right">
-            <div class="row ">
+            <div class="row">
               <h4>ประเภทผู้ใช้</h4>
-              <div class="dropdown ">
-                <button class="btn-dropdown btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton"
-                  data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"
-                  style="background-color: transparent;color: #007fa4; ">
+              <div class="dropdown">
+                <button
+                  class="btn-dropdown btn-secondary dropdown-toggle"
+                  type="button"
+                  id="dropdownMenuButton"
+                  data-toggle="dropdown"
+                  aria-haspopup="true"
+                  aria-expanded="false"
+                  style="background-color: transparent; color: #007fa4;"
+                >
                   ทั้งหมด
                 </button>
                 <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
@@ -48,50 +60,47 @@
       </div>
 
       <div class="col-12">
-        <hr>
+        <hr />
       </div>
       <div class="col-12">
-          <table class="table">
-              <thead class="thead-dark">
-                <tr>
-                  <th scope="col">ลำดับ</th>
-                  <th scope="col">ชื่อนามสกุล</th>
-                  <th scope="col">หน่วยงาน</th>
-                  <th scope="col">เบอร์โทรศัพท์</th>
-                  <th scope="col">สถานะ</th>
-                </tr>
-              </thead>
-              <tbody>
-                <tr>
-                  <td>123</td>
-                  <td>1101</td>
-                  <td>สมจิตร ช่างซ่อม</td>
-                  <td>....</td>
+        <table class="table">
+          <thead class="thead-dark">
+            <tr>
+              <th scope="col">ลำดับ</th>
+              <th scope="col">ชื่อนามสกุล</th>
+              <th scope="col">หน่วยงาน</th>
+              <th scope="col">เบอร์โทรศัพท์</th>
+              <th scope="col">สถานะ</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>123</td>
+              <td>1101</td>
+              <td>สมจิตร ช่างซ่อม</td>
+              <td>....</td>
 
-                  <td><samp style="color: #ffc107">รออนุมัติ</samp></td>
-
-                </tr>
-                <tr>
-                    <td>124</td>
-                    <td>1102</td>
-                    <td>สมจิตร ช่างซ่อม</td>
-                    <td>....</td>
-                    <td><samp style="color: #28a745">ผ่านเกณฑ์</samp> </td>
-
-                </tr>
-                <tr>
-                    <td>125</td>
-                    <td>1103</td>
-                    <td>สมจิตร ช่างซ่อม</td>
-                    <td>....</td>
-                    <td><samp style="color: #dc3545">ไม่ผ่านเกณฑ์</samp></td>
-
-                </tr>
-              </tbody>
-            </table>
+              <td><samp style="color: #ffc107;">รออนุมัติ</samp></td>
+            </tr>
+            <tr>
+              <td>124</td>
+              <td>1102</td>
+              <td>สมจิตร ช่างซ่อม</td>
+              <td>....</td>
+              <td><samp style="color: #28a745;">ผ่านเกณฑ์</samp></td>
+            </tr>
+            <tr>
+              <td>125</td>
+              <td>1103</td>
+              <td>สมจิตร ช่างซ่อม</td>
+              <td>....</td>
+              <td><samp style="color: #dc3545;">ไม่ผ่านเกณฑ์</samp></td>
+            </tr>
+          </tbody>
+        </table>
       </div>
-
 
       <!--container  -->
     </div>
   </div>
+</div>
